--- a/YumYumDeliv/yum_deliv/templates/Registration.html
+++ b/YumYumDeliv/yum_deliv/templates/Registration.html
@@ -1,65 +1,164 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up</title>
+    <title>Регистрация</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <style>
-     body{
-            background-image: url(https://images.unsplash.com/photo-1493723843671-1d655e66ac1c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
+        body {
+            margin: 0;
+            font-family: 'Inter', Arial, sans-serif;
         }
-        input{
-            margin-top:20px;
+
+        input {
+            margin-top: 20px;
             height: 30px;
-            width: 150px;
+            padding: 12px 20px;
+            width: 200px;
+            margin: 8px 0;
             border-radius: 5px;
-
-        }
-        input[type="submit"]{
-            background-color: rgba(7, 179, 185, 0.753);
-            color: rgb(255, 255, 255);
-            border: none;
-            border-radius: 5px;
+            font-size: 18px;
         }
 
+        input[type="checkbox"]{
+            margin: 0px;
+            padding: 0px;
+        }
+
+        .header-main {
+            text-align: center;
+        }
+
+        .navbar img {
+            max-width: 100%;
+            height: auto;
+            display: inline-block;
+            margin: 0 auto;
+        }
+
+        .form-regist {
+            max-width: 600px;
+            margin: 30px auto;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(10, 10, 10, 0.2);
+            background-color: #fff;
+        }
+
+        .form-regist h1 {
+            text-align: center;
+        }
+
+        .form-regist label {
+            display: block;
+            margin-top: 10px;
+        }
+
+        .form-regist input {
+            width: 100%;
+            height: 30px;
+            border-radius: 5px;
+            margin-top: 5px;
+        }
+
+        .remember-checkbox {
+            margin-top: 15px;
+            display: flex;
+            align-items: center;
+        }
+
+        .remember-checkbox label {
+            margin-left: 5px;
+            margin-bottom: 9px;
+        }
+
+        .remember-checkbox input {
+            margin-right: 5px;
+        }
+
+        .remember {
+            width: 50px;
+        }
+
+          .regist {
+                background-color: rgba(7, 179, 185, 0.753);
+                color: rgb(255, 255, 255);
+                border: none;
+                border-radius: 10px;
+                width: 50%;
+                margin: 10px 150px;
+                height: 40px;
+                text-align: center;
+            }
+
+            .messages {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+            }
+
+            .messages li {
+                margin-top: 10px;
+            }
+            .footer-main{
+                text-align: center;
+            }
     </style>
 </head>
 <body>
+    <header class="header-main">
+        <nav class="navbar">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <img src="../static/res/logo.png" alt="Logo">
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="form-regist">
+        <form action="/postsignUp/" method="post">
+            {% csrf_token %}
+            <h1 class="h1-title">Заполните форму для регистрации</h1>
+            <label for="Email">E-mail</label>
+            <input type="email" id="Email" name="email" placeholder="Введите ваш E-mail">
 
-<form action="/postsignUp/" method="post">
-    {% csrf_token %}
-    <br/>
-      <h1>Sign Up</h1>
+            <label for="Password">Введите пароль</label>
+            <input type="password" id="Password" name="pass" placeholder="Введите пароль">
 
+            <label for="confirm_password">Повторите пароль</label>
+            <input type="password" id="confirm_password" name="pass-repeat" placeholder="Повторите пароль">
 
-    <p>Please fill in this form</p>
+            <label for="username">Укажите ваше имя</label>
+            <input type="name" id="Username" name="name" placeholder="Имя">
 
+            <label for="surname">Укажите вашу фамилию</label>
+            <input type="surname" id="surname" name="surname" placeholder="Фамилия">
 
-        <label for="username">Username</label>
-        <input type="name" id="Username" name="name" placeholder="Your Name"><br><br>
-        <!-- Email: -->
-        <label for="Email" >Email</label>
-        <input type="email" id="Email" name="email" placeholder="Your Email Id"><br><br>
-        <!-- Password: -->
-        <label for="Password">Password/label>
-        <input type="password" id="Password" name="pass" placeholder="Password"><br><br>
-        <!-- RepeatPassword: -->
-        <label for="confirm_password">Confirm Password</label>
-        <input type="password" id="confirm_password" name="pass-repeat" placeholder=" Repeat Password"><br><br>
-        <label>
-          <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-        </label>
+            <label for="patronymic">Укажите ваше отчество (При наличии)</label>
+            <input type="patronymic" id="patronymic" name="patronymic" placeholder="Фамилия">
 
-        <input type="submit" value="SignUp"><br><br>
+            <div class="remember-checkbox">
+                <label for="remember">Запомнить меня</label>
+                <input type="checkbox" checked="checked" id="remember" class="remember" name="remember">
+            </div>
 
-</form>
-{% if messages %}
-    <ul class="messages">
-    {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-            {{ message }}
-        </li>
-    {% endfor %}
-    </ul>
-{% endif %}
+            <button class="regist" type="submit">Зарегистрироваться</button>
+        </form>
+    </div>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                    {{ message }}
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    <footer class="footer-main">
+        <p><strong>YumYumDelivery, 2024</strong></p>
+    </footer>
 </body>
 </html>
