--- a/YumYumDeliv/yum_deliv/templates/Reset.html
+++ b/YumYumDeliv/yum_deliv/templates/Reset.html
@@ -1,35 +1,130 @@
 <!DOCTYPE html>
 {% load static %}
-{%if msg%}
+{% if msg %}
     <script>
         window.alert('{{msg}}');
     </script>
-{% endif%}
-<html lang="en">
+{% endif %}
+<html lang="ru">
 <head>
+    <script src="https://kit.fontawesome.com/680b9acf9e.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static '/css/Reset.css/' %}">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/footer.css/' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <title>Восстановление пароля</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Inter', Arial, sans-serif;
+        }
+
+        form {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            max-width: 600px;
+            margin: 30px auto;
+        }
+
+        h1 {
+            color: black;
+        }
+
+        input {
+            height: 30px;
+            width: 100%;
+            margin: 8px 0;
+            border-radius: 5px;
+            font-size: 18px;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            padding: 0px;
+            background-color: rgba(7, 179, 185, 0.753);
+            color: rgb(255, 255, 255);
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+            height: 40px;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+
+        .back{
+            padding: 20px;
+        }
+
+        .back a {
+            color: cornflowerblue;
+            text-decoration: none;
+        }
+
+        .back i {
+            font-size: 22px;
+        }
+
+        .inner {
+            text-align: center;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .navbar {
+            background-color: #38A9CC;
+            padding: 10px 0;
+            width: 100%;
+        }
+
+        .navbar img {
+            max-width: 100%;
+            height: auto;
+            display: inline-block;
+            margin: 0 auto;
+        }
+
+        .col {
+            display: flex;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
+    <header class="header-main">
+        <nav class="navbar">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <img src="{% static 'res/logo.png' %}" alt="Logo">
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="back">
-        <a href="/"><i class='fas fa-arrow-left' style='font-size:22px'>  </i>Back</a>
+        <a href="/" style="display: flex; align-items: center; text-decoration: none; color: black;">
+            <i class="fa-solid fa-arrow-left"></i>
+        </a>
     </div>
     <div class="container">
         <div class="inner">
-            <h1>Reset Your Password</h1><br>
+            <h1>Восстановление пароля</h1><br>
             <form action="/postReset/" method="POST">
                 {% csrf_token %}
-                <input type="email" name="email" id="email" placeholder="Enter Your email" required><br><br>
-                <input type="submit" value="Send Reset Link">
+                <input type="email" name="email" id="email" placeholder="Введите E-mail с которого вы регистрировались" required><br><br>
+                <input type="submit" value="Отправить ссылку для сброса пароля">
             </form>
         </div>
     </div>
+    <footer class="footer-main">
+        <p><strong>YumYumDelivery, 2024</strong></p>
+    </footer>
 </body>
 </html>
